# lang-sort

./: .gitignore  README.md  README_en.md  flake.nix  pyproject.toml
lang_sort/: main.py  sorter.py
